--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ deploy:
   script: 
     - docker build -t post
     - heroku container:login
-    - heroku container:push post
+    - heroku container:push post --app quiet-beach-04344
   on:
     branch: master
