--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 services:
   - docker
 script: 
-  - docker build post
+  - docker build .
   - heroku container:login
   - heroku container:push post
 deploy:
