--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
 script: 
   - docker build -t post .
   - heroku container:login
-  - heroku container:push post
+  - heroku container:push post --app quiet-beach-04344
 deploy:
   provider: script
   script: 
