--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ sudo: required
 services:
   - docker
 script: 
-  - docker-compose up --no-start --build    
+  - docker build -t test-jira-app .    
   - docker ps 
+  - docker images ls
   - heroku container:login
   - heroku container:push post --app quiet-beach-04344
 deploy:
