--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ script:
   - docker build -t test-jira-app .    
   - docker ps 
   - docker images ls
-  - echo "$REGISTRY_PASS" | docker login -u "$DOCKER_USERNAME" --password-stdin registry.heroku.com
+  - echo "$REGISTRY_PASS" | docker login -u "$REGISTRY_USERNAME" --password-stdin registry.heroku.com
 #   - docker login --username=$REGISTRY_USER --password=$REGISTRY_PASS registry.heroku.com
   - heroku container:push test-jira-app --app quiet-beach-04344
 deploy:
