--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,14 @@ script:
   - docker build -t test-jira-app .    
   - docker ps 
   - docker images ls
-  - echo "$REGISTRY_PASS" | docker login -u $REGISTRY_USER -p $REGISTRY_PASS registry.heroku.com
+#   - echo "$REGISTRY_PASS" | docker login -u $REGISTRY_USER -p $REGISTRY_PASS registry.heroku.com
 #   - docker login -u $REGISTRY_USERNAME -p $REGISTRY_PASS registry.heroku.com
 #   - docker login --username=$REGISTRY_USER --password=$REGISTRY_PASS registry.heroku.com
-  - heroku container:push test-jira-app --app quiet-beach-04344
+#   - heroku container:push test-jira-app --app quiet-beach-04344
 deploy:
  provider: heroku
- script:
-  - heroku container:push test-jira-app --app quiet-beach-04344
+ run:
+  - heroku container:push test-jira-app
+  - heroku container:release test-jira-app
  api-key: $HEROKU_API_KEY
  app: test-jira-app
