--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ sudo: required
 services:
   - docker
 script: 
-  - docker build -t test-jira-app .    
-  - docker ps 
-  - docker images ls
+#   - docker build -t test-jira-app .    
+#   - docker ps 
+#   - docker images ls
 #   - echo "$REGISTRY_PASS" | docker login -u $REGISTRY_USER -p $REGISTRY_PASS registry.heroku.com
 #   - docker login -u $REGISTRY_USERNAME -p $REGISTRY_PASS registry.heroku.com
 #   - docker login --username=$REGISTRY_USER --password=$REGISTRY_PASS registry.heroku.com
