--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,13 @@ sudo: required
 services:
   - docker
 script: 
-#   - docker build -t test-jira-app .    
-#   - docker ps 
-#   - docker images ls
-#   - echo "$REGISTRY_PASS" | docker login -u $REGISTRY_USER -p $REGISTRY_PASS registry.heroku.com
+#     - docker build -t test-jira-app .    
+    - docker ps 
+    - heroku login
+    - heroku container:login
+    - heroku container:push test-jira-app
+    - heroku container:release test-jira-app
+#     - echo "$REGISTRY_PASS" | docker login -u $REGISTRY_USER -p $REGISTRY_PASS registry.heroku.com
 #   - docker login -u $REGISTRY_USERNAME -p $REGISTRY_PASS registry.heroku.com
 #   - docker login --username=$REGISTRY_USER --password=$REGISTRY_PASS registry.heroku.com
 #   - heroku container:push test-jira-app --app quiet-beach-04344
