--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ services:
   - docker
 script: 
 #     - docker build -t test-jira-app .    
-    - docker ps 
-    - heroku login
-    - heroku container:login
-    - heroku container:push test-jira-app
-    - heroku container:release test-jira-app
+#     - docker ps 
+#     - heroku login
+#     - heroku container:login
+#     - heroku container:push test-jira-app
+#     - heroku container:release test-jira-app
 #     - echo "$REGISTRY_PASS" | docker login -u $REGISTRY_USER -p $REGISTRY_PASS registry.heroku.com
 #   - docker login -u $REGISTRY_USERNAME -p $REGISTRY_PASS registry.heroku.com
 #   - docker login --username=$REGISTRY_USER --password=$REGISTRY_PASS registry.heroku.com
