--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ sudo: required
 services:
   - docker
 script: 
-      -(
-      echo "$HE"  # or you can plaintext it, if you're feeling adventurous
-      echo "$HP"
-        ) | heroku login
+#       -(
+#       echo "$HE"  # or you can plaintext it, if you're feeling adventurous
+#       echo "$HP"
+#         ) | heroku login
 #     - docker build -t test-jira-app .    
 #     - docker ps 
 #     - heroku login
@@ -19,7 +19,10 @@ script:
 # deploy:
 #  provider: heroku
 #  run:
-#   - heroku login
+     -(
+      echo "$HE"  # or you can plaintext it, if you're feeling adventurous
+      echo "$HP"
+        ) | heroku login
 #   - heroku container:login
 #   - heroku container:push test-jira-app
 #   - heroku container:release test-jira-app
