--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
   - docker build -t test-jira-app .
   - heroku container:login
   - heroku container:push --app=test-jira-app
-  - heroku container:release --app=test-jira-app
+  - heroku container:release test-jira-app --app=test-jira-app
 #   - heroku container:login
 #   - docker images ls	    - heroku login
   - ( echo "$HE"   echo "$HP" ) | heroku login
