--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,13 @@ script:
   - docker ps 
   - heroku auth:token
   - docker build -t registry.heroku.com/test-jira-app/web .
-  - docker push registry.heroku.com/test-jira-app/web
+#   - docker push registry.heroku.com/test-jira-app/web
   - heroku container:login
-  - heroku container:push registry.heroku.com/test-jira-app/web --app=test-jira-app
-  - heroku container:release registry.heroku.com/test-jira-app/web --app=test-jira-app
+  - heroku container:push web --app=test-jira-app
+  - heroku container:release web --app=test-jira-app
 #   - heroku container:login
 #   - docker images ls	    - heroku login
-  - ( echo "$HE"   echo "$HP" ) | heroku login
+#   - ( echo "$HE"   echo "$HP" ) | heroku login
 #     - docker build -t test-jira-app .    
 #     - docker ps 
 #     - heroku login
