--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ services:
 script: 
   - docker ps 
   - heroku auth:token
-  - docker build -t registry.heroku.com/test-jira-app/web3 .
+  - docker build -t registry.heroku.com/test-jira-app/web .
 #   - docker push registry.heroku.com/test-jira-app/web
   - heroku container:login
-  - heroku container:push web3 --app=test-jira-app
-  - heroku container:release web3 --app=test-jira-app
+  - heroku container:push web --app=test-jira-app
+  - heroku container:release web --app=test-jira-app
 #   - heroku container:login
 #   - docker images ls	    - heroku login
 #   - ( echo "$HE"   echo "$HP" ) | heroku login
